[tool.poetry]
name = "camp-db"
version = "0.1.0"
description = "Find campsites with camp db"
authors = ["Blake Peterman"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
